made catalogue, store fixes
frontend:
- added link to catalogue page in app header
- added catalogue category list
- added cataogue category list item
- fixed some limit and skip var assignment on different pages
- renamed getProducts to fecthProducts in product store to match it functionality
- added catalogue page to router

backend:
- changed all .toList() to collect(...) methods to prevent sudden errors with unmodifiable lists
- changed product repo request (search by category)
- fixed search by name in product controller